fixed bug with nav bar being too wide for viewmodel maxwidth 480 -> 675

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,7 +224,7 @@ input, select, textarea {
 		width: device-width;
 	}
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 675px) {
 
 		html, body {
 			min-width: 320px;
@@ -494,7 +494,7 @@ input, select, textarea {
 					width: calc(25% - 0.375rem);
 				}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			form > .fields {
 				width: calc(100% + 3rem);
@@ -858,7 +858,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			.image.main {
 				margin: 1.5rem 0;
@@ -988,7 +988,7 @@ input, select, textarea {
 				width: 100%;
 			}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			ul.actions:not(.fixed) {
 				-moz-flex-direction: column;
@@ -1370,7 +1370,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			#wrapper {
 				padding: 1rem;
@@ -1603,7 +1603,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			#header {
 				padding: 1.5rem 0;
@@ -1758,7 +1758,7 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 675px) {
 
 			#main article {
 				padding: 3rem 1.5rem 0.5rem 1.5rem ;
